<resources>
    <string name="app_name">PlayApplication</string>
    <string name="title_ph">Title</string>
    <string name="by_abc">by %s</string>
    <string name="score">1456</string>
    <string name="no_data">No Data</string>
    <string name="login">Login</string>
    <string name="password_ph">Password</string>
    <string name="username_ph">Email</string>
    <string name="email_error">Invalid Email</string>
    <string name="password_error">Password should be in between 8 to 16 chars</string>
    <string name="dark_mode">DARK</string>


    <!-- Preferences -->
    <string name="preference_key_theme" translatable="false">preference_key_theme</string>
    <string name="preference_theme_title">Theme</string>

    <string name="light_theme_name">Light theme</string>
    <string name="dark_theme_name">Dark theme</string>
    <string name="auto_battery_name">Auto battery</string>
    <string name="follow_system_name">Follow system</string>

    <string name="light_theme_value" translatable="false">Light</string>
    <string name="dark_theme_value" translatable="false">Dark</string>
    <string name="auto_battery_value" translatable="false">Auto-battery</string>
    <string name="follow_system_value" translatable="false">System</string>

</resources>