<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="logindetailsstate"
            type="com.yogendra.playapplication.ui.login.validation.LoginInputState" />

<!--        <variable-->
<!--            name="loginmodel"-->
<!--            type="com.yogendra.playapplication.ui.login.LoginViewModel" />-->
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.login.LoginFragment">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/namo2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_ip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:errorEnabled="true"
                app:boxCornerRadiusTopEnd="@dimen/material_tv_corner"
                app:boxCornerRadiusBottomStart="@dimen/material_tv_corner"
                app:errorText="@{logindetailsstate.emailError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animationView">

                <EditText
                    android:id="@+id/username_ev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_bg_1"
                    android:ems="2"
                    android:hint="@string/username_ph"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:paddingStart="@dimen/padding_normal"
                   />
<!--                app:textChangedListener="@{loginmodel.getTextWatcher}"-->

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_ip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:errorEnabled="true"
                app:boxCornerRadiusTopEnd="@dimen/material_tv_corner"
                app:boxCornerRadiusBottomStart="@dimen/material_tv_corner"
                app:errorText="@{logindetailsstate.passwordError}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_ip"
                app:layout_constraintVertical_bias="0.0">

                <EditText
                    android:id="@+id/password_ev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_bg_1"
                    android:ems="2"
                    android:hint="@string/password_ph"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:padding="10dp"
                    android:paddingStart="@dimen/padding_normal"
                 />
<!--                app:textChangedListener="@{loginmodel.getPasswordTextWatcher}"-->
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_state"
                android:elevation="32dp"
                android:enabled="@{logindetailsstate.dataValid}"
                android:padding="12dp"
                android:text="@string/login"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/material_tv_corner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password_ip"
                app:layout_constraintTop_toBottomOf="@+id/password_ip"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>